--- a/index.html
+++ b/index.html
@@ -61,18 +61,18 @@
             <footer class="card__footer">
               <div class="buttons">
                 <a
-                  href="https://1drv.ms/u/s!As5U-bd3F-a6gYsmbbG-Dybk88biRQ?e=7q73aZ"
+                  href=""
                   target="_blank"
                   rel="noopener noreferrer"
                   class="button button--lg button--primary"
                   >Contactanos</a
                 >
                 <a
-                  href="https://github.com/grupo-desarollo-web-fullstack/tuition-software"
+                  href="https://www.youtube.com"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="button button--lg button--primary button--outline"
-                  >GitHub</a
+                  >Videos</a
                 >
               </div>
             </footer>
@@ -87,29 +87,29 @@
             />
             <figure class="hero-img__decorators">
               <img
-                src="./assets/svg/logo-html-5.svg"
-                alt="Logo HTML"
+                src="./assets/svg/processor.png"
+                alt="Logo processor"
                 width="64"
                 height="64"
                 class="hero-img__decorator"
               />
               <img
-                src="./assets/svg/logo-css-3.svg"
-                alt="Logo CSS"
+                src="./assets/svg/hand.png"
+                alt="Logo hand"
                 width="64"
                 height="64"
                 class="hero-img__decorator"
               />
               <img
-                src="./assets/svg/logo-javascript.svg"
-                alt="Logo JavaScript"
+                src="./assets/svg/eyes.png"
+                alt="Logo eyes"
                 width="64"
                 height="64"
                 class="hero-img__decorator"
               />
               <img
-                src="./assets/svg/logo-react.svg"
-                alt="Logo React"
+                src="./assets/svg/virtual.png"
+                alt="Logo virtual"
                 width="64"
                 height="64"
                 class="hero-img__decorator"
